# redis-rs

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  CODING_CONVENTIONS.md  Cargo.toml  Dockerfile  LICENSE  MONOIO_INTEGRATION_NOTES.md  Makefile  PR_DESCRIPTION.md  README  README.md  appveyor.yml  build.rs  release.sh  release.toml  runtests.sh  rust.mk  rustfmt.toml  upload-docs.sh  version1.md  version2.md
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/install-db/: action.yml
.github/actions/lint-and-check/: action.yml
.github/workflows/: rust.yml
afl/parser/: Cargo.toml
afl/parser/in/: array  array-null  bulkstring  bulkstring-null  error  integer  invalid-string  string
afl/parser/src/: main.rs  reproduce.rs
benches/: bench_basic.rs  bench_cluster.rs
config/: global.toml  redis.toml
connect-hook-test/: Cargo.toml
connect-hook-test/src/: main.rs
docs/: commands.json  redis-rs-guide.md
example/: Cargo.toml
example/src/: main.rs
examples/: async-await.rs  async-connection-loss.rs  async-multiplexed.rs  async-pub-sub.rs  async-timeout.rs  async.rs  basic.rs  geospatial.rs  r2d2.rs  scan.rs  streams.rs
redis/: CHANGELOG.md  Cargo.toml  build.rs  release.toml
redis-codegen/: Cargo.toml
redis-codegen/src/: commands.rs  feature_gates.rs  ident.rs  lib.rs
redis-codegen/src/code_generator/: arguments.rs  commands.rs  mod.rs
redis-test/: CHANGELOG.md  Cargo.toml  README.md  release.toml
redis-test/src/: cluster.rs  lib.rs  sentinel.rs  server.rs  utils.rs
redis/benches/: bench_basic.rs  bench_cache.rs  bench_cluster.rs  bench_cluster_async.rs  bench_decode.rs  bench_pipeline_build.rs
redis/docs/: SECURITY.md  token_authentication.md
redis/examples/: acl.rs  async-await.rs  async-caching.rs  async-connection-loss.rs  async-monitor.rs  async-multiplexed.rs  async-pub-sub-resp3.rs  async-pub-sub.rs  async-resp3-pub-sub.rs  async-scan.rs  async-typed.rs  basic.rs  bloom.rs  cluster_reconnect.rs  connection_manager_reconnect.rs  geospatial.rs  latency-aware-routing.rs  monoio-comprehensive.rs  streams.rs  tls.rs  tokio-comprehensive.rs  typed.rs
redis/src/: acl.rs  aio.rs  auth.rs  auth_management.rs  bb8.rs  bignum.rs  bloom.rs  client.rs  cluster.rs  cluster_aio.rs  cluster_client.rs  cluster_connections_map.rs  cluster_pipeline.rs  cluster_routing.rs  cluster_slotmap.rs  cluster_topology.rs  cmd.rs  cmd.rs.bak  commands.rs  connection.rs  connection_config.rs  entra_id.rs  geo.rs  lib.rs  macros.rs  parser.rs  pipeline.rs  push_manager.rs  r2d2.rs  script.rs  sentinel.rs  streams.rs  subscription_tracker.rs  tls.rs  types.rs
redis/src/aio/: async_std.rs  async_transactions.rs  connection.rs  connection_manager.rs  mod.rs  monitor.rs  monitor.rs.bak  monoio.rs  monoio.rs.bak  multiplexed_connection.rs  pubsub.rs  pubsub.rs.bak  pubsub_manager.rs  runtime.rs  runtime.rs.bak  smol.rs  streams.rs  tokio.rs
redis/src/caching/: cache_manager.rs  cmd.rs  config.rs  mod.rs  sharded_lru.rs  statistics.rs
redis/src/cluster_async/: LICENSE  connections_container.rs  connections_logic.rs  mod.rs  request.rs  routing.rs
redis/src/cluster_handling/: client.rs  mod.rs  routing.rs  slot_map.rs  slot_range_map.rs  topology.rs
redis/src/cluster_handling/async_connection/: addressed_push_sender.rs  connection_store.rs  diagnostics.rs  mod.rs  request.rs  routing.rs  routing_table.rs
redis/src/cluster_handling/read_routing/: interface.rs  mod.rs  random_replica.rs  round_robin_replica.rs  traits.rs
redis/src/cluster_handling/sync_connection/: mod.rs  pipeline.rs
redis/src/commands/: acl.rs  cluster_scan.rs  geo.rs  hotkeys.rs  json.rs  json_macro.rs  macros.rs  mod.rs  redis_arrays.rs  search.rs  streams.rs  vector_sets.rs
redis/src/commands/query_engine/create/: command.rs  tests.rs  types.rs
redis/src/connection/: addr.rs  info.rs  mod.rs
redis/src/connection/io/: mod.rs  tcp.rs  tls_native.rs  tls_rustls.rs  unix.rs
redis/src/errors/: mod.rs  parsing_error.rs  redis_error.rs  server_error.rs
redis/src/io/: dns.rs  mod.rs  tcp.rs
redis/tests/: Cargo.toml  mock_cluster_async.rs  parser.rs  test_acl.rs  test_async.rs  test_async_async_std.rs  test_async_cluster_connections_logic.rs  test_async_pubsub.rs  test_async_transaction.rs  test_auth.rs  test_basic.rs  test_bignum.rs  test_bloom.rs  test_cache.rs  test_cache_cluster.rs  test_cluster.rs  test_cluster_async.rs  test_cluster_credentials_provider.rs  test_cluster_dedup_reconnect.rs  test_cluster_multi_node_reconnect.rs  test_cluster_scan.rs  test_connection_manager_init.rs  test_credentials_provider_failures.rs  test_digest_utils.rs  test_geospatial.rs  test_hotkeys.rs  test_iter_async.rs  test_json.rs  test_module_bloom.rs  test_module_json.rs  test_monoio_async.rs  test_script.rs  test_sentinel.rs  test_streams.rs  test_subkeyspace_notifications.rs  test_support.rs  test_tls_cert_auth.rs  test_types.rs
redis/tests/query_engine/: test_ft_create.rs
redis/tests/support/: cluster.rs  mock_cluster.rs  mod.rs  sentinel.rs  util.rs  version.rs
scripts/: get_command_info.py  update-versions.sh
src/: acl.rs  aio.rs  aio_async_std.rs  async.rs  client.rs  cluster.rs  cluster_client.rs  cluster_pipeline.rs  cluster_routing.rs  cmd.rs  commands.rs  compat.rs  connection.rs  geo.rs  lib.rs  macros.rs  parser.rs  pipeline.rs  r2d2.rs  script.rs  streams.rs  types.rs  types_into.rs
src/aio/: async_std.rs  tokio.rs
src/commands/: json.rs  macros.rs  mod.rs
src/example/: main.rs
src/redis/: client.rs  cmd.rs  commands.rs  connection.rs  enums.rs  lib.rs  macros.rs  parser.rs  scan.rs  script.rs  test.rs  types.rs  utils.rs
test-macros/: Cargo.toml
test-macros/src/: lib.rs
tests/: basic.rs  common.rs  generate.rs  parser.rs  test_acl.rs  test_async.rs  test_async_async_std.rs  test_basic.rs  test_cluster.rs  test_geospatial.rs  test_json.rs  test_streams.rs  test_types.rs  test_types_into.rs
tests/common/: mod.rs
tests/support/: cluster.rs  mod.rs
valkey/: Cargo.toml  README.md
