[package]
name = "redis"
version = "0.16.1-alpha.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>", "Jan-Erik Rediger <janerik@fnordig.de>"]
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/mitsuhiko/redis-rs"
repository = "https://github.com/mitsuhiko/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
dtoa = "0.4"
itoa = "0.4.3"

# This is a dependency that already exists in url
percent-encoding = "2.1"

# We need this for redis url parsing
url = "2.1"

# We need this for script support
sha1 = { version = ">= 0.2, < 0.7", optional = true }

combine = { version = "4.0.1", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "0.5", optional = true }
futures-util = { version = "0.3.0", default-features = false, optional = true }
pin-project-lite = { version = "0.1", optional = true }
tokio-util = { version = "0.3.1", optional = true }
tokio = { version = "0.2.10", optional = true }

# Only needed for the connection manager
arc-swap = { version = "0.4.4", optional = true }
futures = { version = "0.3.3", optional = true }

# Only needed for the r2d2 feature
r2d2 = { version = "0.8.8", optional = true }

# Only needed for cluster
crc16 = { version = "0.4.0", optional = true }
rand = { version = "0.7.0", optional = true }
# Only needed for async_std support
async-std = { version = "1.5.0", optional = true}
async-trait = "0.1.24"

[features]
default = ["streams", "geospatial", "tokio-comp", "async-std-comp", "script"]
aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/sink", "tokio/sync", "tokio/stream", "tokio/tcp", "tokio/uds", "tokio/io-util", "tokio-util", "tokio-util/codec", "combine/tokio-02"]
tokio-rt-core = ["tokio-comp", "tokio/rt-core"]
geospatial = []
cluster = ["crc16", "rand"]
script = ["sha1"]
async-std-comp = ["aio", "async-std"]
tokio-comp = ["aio", "tokio"]
connection-manager = ["tokio-rt-core", "arc-swap", "futures"]
streams = []


[dev-dependencies]
rand = "0.7"
net2 = "0.2"
assert_approx_eq = "1.0"
fnv = "1.0.5"
futures = "0.3"
criterion = "0.3"
partial-io = { version = "0.3", features = ["tokio", "quickcheck"] }
quickcheck = "0.6"
tokio = { version = "0.2", features = ["rt-core", "macros", "time"] }

[[test]]
name = "test_async"
required-features = ["tokio-rt-core"]

[[test]]
name = "test_async_async_std"
required-features = ["async-std-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[bench]]
name = "bench_basic"
harness = false
required-features = ["tokio-rt-core"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-rt-core"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-connection-loss"
required-features = ["connection-manager"]
