[package]
name = "redis"
version = "0.16.1-alpha.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>", "Jan-Erik Rediger <janerik@fnordig.de>"]
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/mitsuhiko/redis-rs"
repository = "https://github.com/mitsuhiko/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
dtoa = "0.4.6"
itoa = "0.4.6"

# This is a dependency that already exists in url
percent-encoding = "2.1.0"

# We need this for redis url parsing
url = "2.1.1"

# We need this for script support
sha1 = { version = "0.6.0", optional = true }

combine = { version = "4.2.1", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "0.5.5", optional = true }
futures-util = { version = "0.3.5", default-features = false, optional = true }
pin-project-lite = { version = "0.1.7", optional = true }
tokio-util = { version = "0.3.1", optional = true }
tokio = { version = "0.2.21", optional = true }

# Only needed for the connection manager
arc-swap = { version = "0.4.7", optional = true }
futures = { version = "0.3.5", optional = true }

# Only needed for the r2d2 feature
r2d2 = { version = "0.8.9", optional = true }

# Only needed for cluster
crc16 = { version = "0.4.0", optional = true }
rand = { version = "0.7.3", optional = true }
# Only needed for async_std support
async-std = { version = "1.6.2", optional = true }
async-trait = "0.1.36"

# Only needed for TLS
native-tls = { version = "0.2.4", optional = true }
tokio-tls = { version = "0.3.1", optional = true }
async-native-tls = { version = "0.3.3", optional = true }

[features]
default = ["acl", "streams", "geospatial", "tokio-comp", "async-std-comp", "script"]
acl = []
aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/sink", "tokio/sync", "tokio/stream", "tokio/tcp", "tokio/uds", "tokio/io-util", "tokio-util", "tokio-util/codec", "combine/tokio-02"]
tokio-rt-core = ["tokio-comp", "tokio/rt-core"]
geospatial = []
cluster = ["crc16", "rand"]
script = ["sha1"]
tls = ["native-tls"]
async-std-comp = ["aio", "async-std"]
async-std-tls-comp = ["async-std-comp", "async-native-tls", "tls"]
tokio-comp = ["aio", "tokio"]
tokio-tls-comp = ["tls", "tokio-tls"]
connection-manager = ["tokio-rt-core", "arc-swap", "futures"]
streams = []


[dev-dependencies]
rand = "0.7.3"
net2 = "0.2.34"
assert_approx_eq = "1.1.0"
fnv = "1.0.7"
futures = "0.3.5"
criterion = "0.3.3"
partial-io = { version = "0.3.1", features = ["tokio", "quickcheck"] }
quickcheck = "0.9.2"
tokio = { version = "0.2.21", features = ["rt-core", "macros", "time"] }
tempdir = "0.3.7"

[[test]]
name = "test_async"
required-features = ["tokio-rt-core"]

[[test]]
name = "test_async_async_std"
required-features = ["async-std-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[test]]
name = "test_acl"

[[bench]]
name = "bench_basic"
harness = false
required-features = ["tokio-rt-core"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-rt-core"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-connection-loss"
required-features = ["connection-manager"]
