[package]
name = "redis-test"
version = "0.4.0"
edition = "2021"
description = "Testing helpers for the `redis` crate"
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis-test"
license = "BSD-3-Clause"
rust-version = "1.65"

[lib]
bench = false

[dependencies]
redis = { version = "0.25.0", path = "../redis" }

bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[features]
aio = ["futures", "redis/aio"]

[dev-dependencies]
redis = { version = "0.25.0", path = "../redis", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
