[package]
name = "redis-test"
version = "1.0.1"
edition = "2024"
description = "Testing helpers for the `redis` crate"
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis-test"
license = "BSD-3-Clause"
rust-version = "1.85"

[lib]
bench = false

[dependencies]
redis = { version = "1.0.0", path = "../redis", default-features = false }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
tempfile = "3.23.0"
socket2 = "0.6"
rand = "0.9"

[features]
aio = ["futures", "redis/aio"]

[dev-dependencies]
redis = { version = "1.0.0", path = "../redis", features = [
    "aio",
    "tokio-comp",
] }
tokio = { workspace = true }
