[package]
name = "redis"
version = "0.27.6"
keywords = ["redis",  "valkey", "cluster", "sentinel", "pubsub"]
description = "Redis driver for Rust."
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.75"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
ryu = "1.0"
itoa = "1.0"

# This is a dependency that already exists in url
percent-encoding = "2.1"

# We need this for redis url parsing
url = "2.5"

# We need this for script support
sha1_smol = { version = "1.0", optional = true }

combine = { version = "4.6", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "1", optional = true }
futures-util = { version = "0.3.15", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio-util = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "sync"], optional = true }
socket2 = { version = "0.5", default-features = false, optional = true }

# Only needed for the connection manager
arc-swap = { version = "1.7.1" }
futures = { version = "0.3.30", optional = true }
backon = { version = "1.3.0", optional = true, default-features = false }

# Only needed for the r2d2 feature
r2d2 = { version = "0.8.10", optional = true }

# Only needed for cluster
crc16 = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
# Only needed for async_std support
async-std = { version = "1.13.0", optional = true }

# Only needed for native tls
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
async-native-tls = { version = "0.5", optional = true }

# Only needed for rustls
rustls = { version = "0.23", optional = true, default-features = false }
webpki-roots = { version = "0.26", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
futures-rustls = { version = "0.26", optional = true, default-features = false }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }

# Only needed for RedisJSON Support
serde = { version = "1.0.217", optional = true }
serde_json = { version = "1.0.133", optional = true }

# Only needed for bignum Support
rust_decimal = { version = "1.36.0", optional = true }
bigdecimal = { version = "0.4.7", optional = true }
num-bigint = "0.4.6"

# Optional aHash support
ahash = { version = "0.8.11", optional = true }

log = { version = "0.4", optional = true }

# Optional uuid support
uuid = { version = "1.11.0", optional = true }

# Optional hashbrown support
hashbrown = { version = "0.15", optional = true }
itertools = "0.13.0"

[features]
default = ["acl", "streams", "geospatial", "script", "keep-alive"]
acl = []
geospatial = []
json = ["dep:serde", "serde/derive", "dep:serde_json"]
cluster = ["dep:crc16", "dep:rand"]
script = ["dep:sha1_smol"]
tls-native-tls = ["dep:native-tls"]
tls-rustls = ["dep:rustls","rustls/std", "rustls/ring", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types"]
tls-rustls-insecure = ["tls-rustls"]
tls-rustls-webpki-roots = ["tls-rustls", "dep:webpki-roots"]
async-std-comp = ["aio", "dep:async-std"]
async-std-native-tls-comp = ["async-std-comp", "dep:async-native-tls", "tls-native-tls"]
async-std-rustls-comp = ["async-std-comp", "dep:futures-rustls", "tls-rustls"]
tokio-comp = ["aio", "tokio/net"]
tokio-native-tls-comp = ["tokio-comp", "tls-native-tls", "dep:tokio-native-tls"]
tokio-rustls-comp = ["tokio-comp", "tls-rustls", "dep:tokio-rustls"]
connection-manager = ["dep:futures", "aio", "dep:backon"]
streams = []
cluster-async = ["cluster", "dep:futures", "dep:futures-util", "dep:log"]
keep-alive = ["dep:socket2"]
sentinel = ["dep:rand"]
tcp_nodelay = []
num-bigint = []
disable-client-setinfo = []

# Deprecated features
tls = ["tls-native-tls"] # use "tls-native-tls" instead
async-std-tls-comp = ["async-std-native-tls-comp"] # use "async-std-native-tls-comp" instead
# Instead of specifying "aio", use either "tokio-comp" or "async-std-comp".
aio = ["bytes", "dep:pin-project-lite", "dep:futures-util", "futures-util/alloc", "futures-util/sink", "dep:tokio", "tokio/io-util", "dep:tokio-util", "tokio-util/codec", "combine/tokio"]

[dev-dependencies]
assert_approx_eq = "1.0"
fnv = "1.0.5"
futures = "0.3"
futures-time = "3"
criterion = "0.5"
partial-io = { version = "0.5", features = ["tokio", "quickcheck1"] }
quickcheck = "1.0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "test-util", "time"] }
tempfile = "=3.14.0"
once_cell = "1"
anyhow = "1"
redis-test = { path = "../redis-test" }
rstest = "0.23"

[[test]]
name = "test_async"
required-features = ["tokio-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[test]]
name = "test_acl"

[[test]]
name = "test_module_json"
required-features = ["json", "serde/derive"]

[[test]]
name = "test_cluster_async"
required-features = ["cluster-async"]

[[test]]
name = "test_bignum"

[[test]]
name = "test_script"
required-features = ["script"]

[[bench]]
name = "bench_basic"
harness = false
required-features = ["tokio-comp"]

[[bench]]
name = "bench_cluster"
harness = false
required-features = ["cluster"]

[[bench]]
name = "bench_cluster_async"
harness = false
required-features = ["cluster-async", "tokio-comp"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-comp"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-scan"
required-features = ["aio"]

[[example]]
name = "async-connection-loss"
required-features = ["connection-manager"]

[[example]]
name = "streams"
required-features = ["streams"]
