[package]
name = "redis"
version = "1.0.3"
keywords = ["redis", "valkey", "cluster", "sentinel", "pubsub"]
description = "Redis driver for Rust."
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
edition = "2024"
rust-version = "1.85"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
ryu = "1.0"
itoa = "1.0"

# This is a dependency that already exists in url
percent-encoding = "2.3"

# We need this for redis url parsing
url = "2.5"

# We need this for script support
sha1_smol = { version = "1.0", optional = true }

combine = { version = "4.6", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "1", optional = true }
cfg-if = { version = "1", optional = true }
futures-util = { version = "0.3.31", default-features = false, features = [
  "std",
  "sink",
], optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio-util = { version = "0.7", optional = true }
tokio = { version = "1", features = [
  "rt",
  "net",
  "time",
  "sync",
], optional = true }

# Only needed for the connection manager
arc-swap = { version = "1.8.0", optional = true }
futures-channel = { version = "0.3.31", optional = true }
backon = { version = "1.6.0", optional = true, default-features = false }

# Only needed for the r2d2 feature
r2d2 = { version = "0.8.10", optional = true }

# Only needed for the bb8 feature
bb8 = { version = "0.9.1", optional = true }

# Only needed for cluster
crc16 = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

#only needed for smol support
smol = { workspace = true, optional = true }
async-io = { version = "2", optional = true }
smol-timeout = { version = "0.6", optional = true }

# Only needed for native tls
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
async-native-tls = { version = "0.5", optional = true }

# Only needed for rustls
rustls = { version = "0.23", optional = true, default-features = false }
webpki-roots = { version = "1.0", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
futures-rustls = { version = "0.26", optional = true, default-features = false }

# Needed for modules Support
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.148", optional = true }

# Only needed for bignum Support
rust_decimal = { version = "1.39.0", optional = true }
bigdecimal = { version = "0.4.10", optional = true }
num-bigint = { version = "0.4.6", optional = true }

# Optional aHash support
ahash = { version = "0.8.11", optional = true }

log = { version = "0.4", optional = true }

# Optional uuid support
uuid = { version = "1.18.1", optional = true }

# Optional hashbrown support
hashbrown = { version = "0.16", optional = true }

# xxhash support for digest utilities
xxhash-rust = { version = "0.8", features = ["xxh3"] }

lru = { version = "0.16", optional = true }
arcstr = "1.2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = { version = "0.6", features = ["all"] }

[features]
default = ["acl", "streams", "geospatial", "script", "num-bigint"]
acl = []
geospatial = []
json = ["dep:serde", "serde/derive", "dep:serde_json"]
vector-sets = ["dep:serde", "serde/derive", "dep:serde_json"]
cluster = ["dep:crc16", "dep:rand"]
script = ["dep:sha1_smol"]
tls-native-tls = ["dep:native-tls"]
tls-rustls = ["dep:rustls", "rustls/std", "dep:rustls-native-certs"]
tls-rustls-insecure = ["tls-rustls"]
tls-rustls-webpki-roots = ["tls-rustls", "dep:webpki-roots"]
smol-comp = ["aio", "dep:smol", "dep:smol-timeout", "dep:async-io"]
smol-native-tls-comp = ["smol-comp", "dep:async-native-tls", "tls-native-tls"]
smol-rustls-comp = ["smol-comp", "dep:futures-rustls", "tls-rustls"]
tokio-comp = ["aio", "tokio/net"]
tokio-native-tls-comp = ["tokio-comp", "tls-native-tls", "dep:tokio-native-tls"]
tokio-rustls-comp = ["tokio-comp", "tls-rustls", "dep:tokio-rustls"]
connection-manager = [
  "dep:arc-swap",
  "dep:futures-channel",
  "aio",
  "dep:backon",
]
streams = []
cluster-async = ["aio", "cluster", "dep:log"]
sentinel = ["dep:rand"]
num-bigint = ["dep:num-bigint"]
cache-aio = ["aio", "dep:lru"]
r2d2 = ["dep:r2d2"]
bb8 = ["dep:bb8"]

# Instead of specifying "aio", use either "tokio-comp" or "smol-comp".
aio = [
  "bytes",
  "dep:pin-project-lite",
  "dep:futures-util",
  "dep:tokio",
  "dep:tokio-util",
  "tokio-util/codec",
  "combine/tokio",
  "dep:cfg-if",
]

[dev-dependencies]
assert_approx_eq = "1.0"
fnv = "1.0.5"
futures = "0.3"
futures-time = "3"
criterion = "0.7"
partial-io = { version = "0.5", features = ["tokio", "quickcheck1"] }
quickcheck = "1.0.3"
tokio = { workspace = true }
tempfile = "3.24.0"
anyhow = "1"
redis-test = { path = "../redis-test" }
rstest = "0.26"
rand = "0.9"
rustls = { version = "0.23", features = ["ring"] }
test-macros = { path = "../test-macros" }
assert_matches = "1.5.0"

[[test]]
name = "test_async"
required-features = ["tokio-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[test]]
name = "test_acl"

[[test]]
name = "test_module_json"
required-features = ["json", "serde/derive"]

[[test]]
name = "test_cluster_async"
required-features = ["cluster-async"]

[[test]]
name = "test_bignum"

[[test]]
name = "test_script"
required-features = ["script"]

[[test]]
name = "test_digest_utils"

[[bench]]
name = "bench_basic"
harness = false
required-features = ["tokio-comp"]

[[bench]]
name = "bench_cluster"
harness = false
required-features = ["cluster"]

[[bench]]
name = "bench_cluster_async"
harness = false
required-features = ["cluster-async", "tokio-comp"]

[[bench]]
name = "bench_cache"
harness = false
required-features = ["tokio-comp", "cache-aio"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-comp"]

[[example]]
name = "acl"
required-features = ["acl"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-resp2-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-resp3-pub-sub"
required-features = ["aio", "connection-manager"]

[[example]]
name = "async-scan"
required-features = ["aio"]

[[example]]
name = "async-connection-loss"
required-features = ["connection-manager"]

[[example]]
name = "streams"
required-features = ["streams"]

[[example]]
name = "async-typed"
required-features = ["aio"]

[[example]]
name = "typed"

[[example]]
name = "async-caching"
required-features = ["tokio-comp", "cache-aio"]
